--- a/server/pom.xml
+++ b/server/pom.xml
@@ -9,7 +9,6 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <packaging>jar</packaging>
     <artifactId>server</artifactId>
 
     <build>
@@ -17,7 +16,7 @@
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
-                    <finalName>server</finalName>
+                    <finalName>server-${project.version}</finalName>
                     <archive>
                         <manifest>
                             <mainClass>cc.blynk.server.Server</mainClass>
@@ -26,6 +25,7 @@
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
+                    <appendAssemblyId>false</appendAssemblyId>
                 </configuration>
                 <executions>
                     <execution>
