--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>common</module>
         <module>client</module>
         <module>server</module>
+        <module>integration-tests</module>
     </modules>
 
     <build>
