--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -27,6 +27,12 @@
             <artifactId>server</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
