Twitter integration added.

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -54,6 +54,12 @@
             <version>1.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.twitter4j</groupId>
+            <artifactId>twitter4j-core</artifactId>
+            <version>4.0.2</version>
+        </dependency>
+
     </dependencies>
 
 </project>
