--- a/server/pom.xml
+++ b/server/pom.xml
@@ -10,6 +10,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>server</artifactId>
+    <packaging>pom</packaging>
+
+    <modules>
+        <module>push-notifications-android</module>
+        <module>tcp-server</module>
+    </modules>
+
 
     <build>
         <plugins>
@@ -43,21 +50,9 @@
     <dependencies>
 
         <dependency>
-            <groupId>cc.blynk</groupId>
-            <artifactId>common</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>commons-cli</groupId>
-            <artifactId>commons-cli</artifactId>
-            <version>1.2</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.twitter4j</groupId>
-            <artifactId>twitter4j-core</artifactId>
-            <version>4.0.2</version>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.5.0</version>
         </dependency>
 
     </dependencies>
