--- a/server/tcp-server/pom.xml
+++ b/server/tcp-server/pom.xml
@@ -3,36 +3,34 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>blynk</artifactId>
+        <artifactId>server</artifactId>
         <groupId>cc.blynk</groupId>
         <version>0.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>integration-tests</artifactId>
+    <artifactId>tcp-server</artifactId>
 
     <dependencies>
+
         <dependency>
             <groupId>cc.blynk</groupId>
             <artifactId>common</artifactId>
             <version>${project.version}</version>
         </dependency>
+
         <dependency>
-            <groupId>cc.blynk</groupId>
-            <artifactId>client</artifactId>
-            <version>${project.version}</version>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.2</version>
         </dependency>
+
         <dependency>
-            <groupId>cc.blynk</groupId>
-            <artifactId>tcp-server</artifactId>
-            <version>${project.version}</version>
+            <groupId>org.twitter4j</groupId>
+            <artifactId>twitter4j-core</artifactId>
+            <version>4.0.2</version>
         </dependency>
-        <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>2.4</version>
-            <scope>test</scope>
-        </dependency>
+
     </dependencies>
 
 </project>
