--- a/server/pom.xml
+++ b/server/pom.xml
@@ -14,6 +14,7 @@
 
     <modules>
         <module>push-notifications-android</module>
+        <module>twitter</module>
         <module>tcp-server</module>
     </modules>
 
@@ -53,6 +54,12 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.5.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>cc.blynk</groupId>
+            <artifactId>common</artifactId>
+            <version>${project.version}</version>
         </dependency>
 
     </dependencies>
