--- a/server/twitter/pom.xml
+++ b/server/twitter/pom.xml
@@ -9,22 +9,15 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>tcp-server</artifactId>
+    <artifactId>twitter</artifactId>
+
 
     <dependencies>
-
         <dependency>
-            <groupId>commons-cli</groupId>
-            <artifactId>commons-cli</artifactId>
-            <version>1.2</version>
+            <groupId>org.twitter4j</groupId>
+            <artifactId>twitter4j-core</artifactId>
+            <version>4.0.2</version>
         </dependency>
-
-        <dependency>
-            <groupId>cc.blynk</groupId>
-            <artifactId>twitter</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-
     </dependencies>
 
 </project>
