--- a/pom.xml
+++ b/pom.xml
@@ -41,12 +41,12 @@
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
-            <version>2.0-beta8</version>
+            <version>2.1</version>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
-            <version>2.0-beta8</version>
+            <version>2.1</version>
         </dependency>
 
         <dependency>
