--- a/server/push-notifications-android/pom.xml
+++ b/server/push-notifications-android/pom.xml
@@ -14,6 +14,12 @@
     <dependencies>
 
         <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.5.0</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.igniterealtime.smack</groupId>
             <artifactId>smack-core</artifactId>
             <version>4.0.6</version>
