Moving some values to properties file.

--- a/integration-tests/src/test/resources/server.properties
+++ b/integration-tests/src/test/resources/server.properties
@@ -1,2 +1,7 @@
+server.default.port=9090
+
 #by default System.getProperty("java.io.tmpdir") used
 data.folder=d:/blynk/test
+
+#period in minutes for saving all user DB to disk.
+profile.save.worker.period=1
