--- a/server/push-notifications-android/pom.xml
+++ b/server/push-notifications-android/pom.xml
@@ -14,6 +14,12 @@
     <dependencies>
 
         <dependency>
+            <groupId>cc.blynk</groupId>
+            <artifactId>common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.5.0</version>
