--- a/server/tcp-server/src/main/resources/server.properties
+++ b/server/tcp-server/src/main/resources/server.properties
@@ -1,2 +1,11 @@
+server.default.port=8080
+
 #by default System.getProperty("java.io.tmpdir") used
 data.folder=/home/pupkin/test
+
+#defines min and max dashId that server accepts from client. Needed to limit possible number of tokens.
+user.dashboardIdMin=1
+user.dashboardIdMax=1
+
+#period in minutes for saving all user DB to disk.
+profile.save.worker.period=1
