Global performance stats for server.

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -12,5 +12,12 @@
     <packaging>jar</packaging>
     <artifactId>common</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.codahale.metrics</groupId>
+            <artifactId>metrics-core</artifactId>
+            <version>3.0.2</version>
+        </dependency>
+    </dependencies>
 
 </project>
