SSL handlers added with self-signed certificates.

--- a/server/tcp-server/src/main/resources/server.properties
+++ b/server/tcp-server/src/main/resources/server.properties
@@ -1,4 +1,6 @@
-server.default.port=8080
+app.ssl.enabled=true
+server.ssl.port=8443
+server.default.port=8442
 
 #by default System.getProperty("java.io.tmpdir") used
 data.folder=/home/pupkin/test
