--- a/server/tcp-server/src/main/resources/server.properties
+++ b/server/tcp-server/src/main/resources/server.properties
@@ -1,5 +1,9 @@
 app.ssl.enabled=true
 server.ssl.port=8443
+server.ssl.cert=/home/pupkin/server.crt
+server.ssl.key=/home/pupkin/server.pem
+server.ssl.key.pass=
+
 server.default.port=8442
 
 #by default System.getProperty("java.io.tmpdir") used
