New module added.

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -14,6 +14,7 @@
 
     <modules>
         <module>push-notifications-android</module>
+        <module>push-notifications-ios</module>
         <module>twitter</module>
         <module>tcp-server</module>
     </modules>
