--- a/server/push-notifications-android/pom.xml
+++ b/server/push-notifications-android/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>push-norifications</artifactId>
+    <artifactId>push-norifications-android</artifactId>
 
     <dependencies>
 
