Quota limit for user added.

--- a/server/tcp-server/src/main/resources/server.properties
+++ b/server/tcp-server/src/main/resources/server.properties
@@ -10,8 +10,11 @@ server.default.port=8442
 data.folder=/home/pupkin/test
 
 #defines min and max dashId that server accepts from client. Needed to limit possible number of tokens.
-user.dashboardIdMin=1
-user.dashboardIdMax=1
+user.dashboard.id.min=1
+user.dashboard.id.max=10
+#user is limited with 100 messages per second.
+user.message.quota.limit=100
+user.in.memory.storage.limit=1000
 
 #period in minutes for saving all user DB to disk.
 profile.save.worker.period=1
