--- a/integration-tests/src/test/resources/server.properties
+++ b/integration-tests/src/test/resources/server.properties
@@ -3,5 +3,12 @@ server.default.port=9090
 #by default System.getProperty("java.io.tmpdir") used
 data.folder=d:/blynk/test
 
+#defines min and max dashId that server accepts from client. Needed to limit possible number of tokens.
+user.dashboard.id.min=1
+user.dashboard.id.max=10
+#user is limited with 100 messages per second.
+user.message.quota.limit=100
+user.in.memory.storage.limit=1000
+
 #period in minutes for saving all user DB to disk.
 profile.save.worker.period=1
