Run scripts automatically when building.

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>client</module>
         <module>server</module>
         <module>integration-tests</module>
+        <module>scripts</module>
     </modules>
 
     <build>
@@ -29,6 +30,31 @@
             </plugin>
         </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <id>win</id>
+            <activation>
+                <os>
+                    <family>Windows</family>
+                </os>
+            </activation>
+            <properties>
+                <script.extension>.bat</script.extension>
+            </properties>
+        </profile>
+        <profile>
+            <id>unix</id>
+            <activation>
+                <os>
+                    <family>unix</family>
+                </os>
+            </activation>
+            <properties>
+                <script.extension>.sh</script.extension>
+            </properties>
+        </profile>
+    </profiles>
 
     <dependencies>
 
