--- a/server/push-notifications-android/pom.xml
+++ b/server/push-notifications-android/pom.xml
@@ -3,7 +3,7 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>blynk</artifactId>
+        <artifactId>server</artifactId>
         <groupId>cc.blynk</groupId>
         <version>0.1</version>
     </parent>
@@ -12,18 +12,6 @@
     <artifactId>push-norifications-android</artifactId>
 
     <dependencies>
-
-        <dependency>
-            <groupId>cc.blynk</groupId>
-            <artifactId>common</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>2.5.0</version>
-        </dependency>
 
         <dependency>
             <groupId>org.igniterealtime.smack</groupId>
