more tags for pom

--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <name>Blynk Server</name>
+    <url>http://www.blynk.cc/</url>
+    <description>
+        Blynk - platform with iOs and Android apps to control Arduino,
+        Raspberry Pi and similar micro-controllers boards over Internet.
+    </description>
+
     <groupId>cc.blynk</groupId>
     <artifactId>blynk</artifactId>
     <version>0.1</version>
