New getToken check + removed dash id validation. replaced with dash max limit property.

--- a/server/tcp-server/src/main/resources/server.properties
+++ b/server/tcp-server/src/main/resources/server.properties
@@ -9,12 +9,11 @@ server.default.port=8442
 #by default System.getProperty("java.io.tmpdir") used
 data.folder=/home/pupkin/test
 
-#defines min and max dashId that server accepts from client. Needed to limit possible number of tokens.
-user.dashboard.id.min=1
-user.dashboard.id.max=10
+#defines maximum allowed number of user dashboards. Needed to limit possible number of tokens.
+user.dashboard.max.limit=10
 #user is limited with 100 messages per second.
 user.message.quota.limit=100
 user.in.memory.storage.limit=1000
 
-#period in minutes for saving all user DB to disk.
-profile.save.worker.period=1
+#period in millis for saving all user DB to disk.
+profile.save.worker.period=60000
