--- a/server/tcp-server/src/main/resources/server.properties
+++ b/server/tcp-server/src/main/resources/server.properties
@@ -8,6 +8,7 @@ server.default.port=8442
 
 #by default System.getProperty("java.io.tmpdir") used
 data.folder=/home/pupkin/test
+logs.folder=./logs
 
 #defines maximum allowed number of user dashboards. Needed to limit possible number of tokens.
 user.dashboard.max.limit=10
