--- a/server/tcp-server/src/main/resources/server.properties
+++ b/server/tcp-server/src/main/resources/server.properties
@@ -4,16 +4,22 @@ server.ssl.cert=/home/pupkin/server.crt
 server.ssl.key=/home/pupkin/server.pem
 server.ssl.key.pass=
 
+#default port for hardware devices
 server.default.port=8442
 
 #by default System.getProperty("java.io.tmpdir") used
 data.folder=/home/pupkin/test
+
+#folder for logs.
 logs.folder=./logs
 
 #defines maximum allowed number of user dashboards. Needed to limit possible number of tokens.
 user.dashboard.max.limit=10
+
 #user is limited with 100 messages per second.
 user.message.quota.limit=100
+
+#in memory storage limit for storing *read* values from hardware
 user.in.memory.storage.limit=1000
 
 #period in millis for saving all user DB to disk.
