Added 128kb limit for userProfile length.

--- a/server/tcp-server/src/main/resources/server.properties
+++ b/server/tcp-server/src/main/resources/server.properties
@@ -19,6 +19,9 @@ user.dashboard.max.limit=10
 #user is limited with 100 messages per second.
 user.message.quota.limit=100
 
+#maximum size of user profile in kb's
+user.profile.max.size=128
+
 #in memory storage limit for storing *read* values from hardware
 user.in.memory.storage.limit=1000
 
