--- a/integration-tests/src/test/resources/server.properties
+++ b/integration-tests/src/test/resources/server.properties
@@ -5,8 +5,14 @@ data.folder=d:/blynk/test
 
 #defines maximum allowed number of user dashboards. Needed to limit possible number of tokens.
 user.dashboard.max.limit=10
+
 #user is limited with 100 messages per second.
 user.message.quota.limit=100
+
+#maximum size of user profile in kb's
+user.profile.max.size=128
+
+#in memory storage limit for storing *read* values from hardware
 user.in.memory.storage.limit=1000
 
 #period in millis for saving all user DB to disk.
