dynamic property resolver

--- a/server/tcp-server/src/main/resources/server.properties
+++ b/server/tcp-server/src/main/resources/server.properties
@@ -14,12 +14,14 @@ data.folder=/home/pupkin/test
 logs.folder=./logs
 
 #defines maximum allowed number of user dashboards. Needed to limit possible number of tokens.
+#reloadable
 user.dashboard.max.limit=10
 
 #user is limited with 100 messages per second.
 user.message.quota.limit=100
 
 #maximum size of user profile in kb's
+#reloadable
 user.profile.max.size=128
 
 #in memory storage limit for storing *read* values from hardware
