--- a/scripts/pom.xml
+++ b/scripts/pom.xml
@@ -26,7 +26,7 @@
                             <goal>exec</goal>
                         </goals>
                         <configuration>
-                            <executable>move${script.extension}</executable>
+                            <executable>./move${script.extension}</executable>
                         </configuration>
                     </execution>
                 </executions>
