Added common user profile storage for all servers.

--- a/integration-tests/src/test/resources/server.properties
+++ b/integration-tests/src/test/resources/server.properties
@@ -17,3 +17,8 @@ user.in.memory.storage.limit=1000
 
 #period in millis for saving all user DB to disk.
 profile.save.worker.period=100
+
+#properties for redis storage for user profile storage.
+redis.userprofile.storage.enabled=false
+redis.userprofile.host=localhost
+redis.userprofile.port=6379
