--- a/server/tcp-server/src/main/resources/server.properties
+++ b/server/tcp-server/src/main/resources/server.properties
@@ -18,6 +18,7 @@ logs.folder=./logs
 user.dashboard.max.limit=10
 
 #user is limited with 100 messages per second.
+#reloadable
 user.message.quota.limit=100
 
 #maximum size of user profile in kb's
@@ -29,3 +30,8 @@ user.in.memory.storage.limit=1000
 
 #period in millis for saving all user DB to disk.
 profile.save.worker.period=60000
+
+#properties for redis storage for user profile storage.
+redis.userprofile.storage.enabled=false
+redis.userprofile.host=localhost
+redis.userprofile.port=6379
