--- a/server/tcp-server/pom.xml
+++ b/server/tcp-server/pom.xml
@@ -25,6 +25,12 @@
             <version>${project.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.6.2</version>
+        </dependency>
+
     </dependencies>
 
 </project>
