Test users profile folder changed.

--- a/integration-tests/src/test/resources/server.properties
+++ b/integration-tests/src/test/resources/server.properties
@@ -1,7 +1,7 @@
 server.default.port=9090
 
 #by default System.getProperty("java.io.tmpdir") used
-data.folder=d:/blynk/test
+data.folder=
 
 #defines maximum allowed number of user dashboards. Needed to limit possible number of tokens.
 user.dashboard.max.limit=10
