Properties refactoring. Simplifications.

--- a/integration-tests/src/test/resources/server.properties
+++ b/integration-tests/src/test/resources/server.properties
@@ -1,6 +1,6 @@
 server.default.port=9090
 
-#by default System.getProperty("java.io.tmpdir") used
+#by default System.getProperty("java.io.tmpdir")/blynk used
 data.folder=
 
 #defines maximum allowed number of user dashboards. Needed to limit possible number of tokens.
