--- a/server/tcp-server/src/main/resources/server.properties
+++ b/server/tcp-server/src/main/resources/server.properties
@@ -7,7 +7,7 @@ server.ssl.key.pass=
 #default port for hardware devices
 server.default.port=8442
 
-#by default System.getProperty("java.io.tmpdir") used
+#by default System.getProperty("java.io.tmpdir")/blynk used
 data.folder=/home/pupkin/test
 
 #folder for logs.
