--- a/server/tcp-server/src/main/resources/server.properties
+++ b/server/tcp-server/src/main/resources/server.properties
@@ -1,4 +1,4 @@
-app.ssl.enabled=true
+app.ssl.enabled=false
 server.ssl.port=8443
 server.ssl.cert=/home/pupkin/server.crt
 server.ssl.key=/home/pupkin/server.pem
@@ -8,7 +8,7 @@ server.ssl.key.pass=
 server.default.port=8442
 
 #by default System.getProperty("java.io.tmpdir")/blynk used
-data.folder=/home/pupkin/test
+data.folder=
 
 #folder for logs.
 logs.folder=./logs
