One more property added.

--- a/integration-tests/src/test/resources/server.properties
+++ b/integration-tests/src/test/resources/server.properties
@@ -22,3 +22,5 @@ profile.save.worker.period=100
 redis.userprofile.storage.enabled=false
 redis.userprofile.host=localhost
 redis.userprofile.port=6379
+
+server.workers.threads=2
