--- a/integration-tests/src/test/resources/server.properties
+++ b/integration-tests/src/test/resources/server.properties
@@ -1,15 +1,24 @@
-server.default.port=9090
+app.ssl.enabled=true
+server.ssl.port=8283
+server.ssl.cert=/test-certs/server.crt
+server.ssl.key=/test-certs/server.pem
+server.ssl.key.pass=blynkawesome
+
+server.default.port=8282
 
 #by default System.getProperty("java.io.tmpdir")/blynk used
 data.folder=
 
 #defines maximum allowed number of user dashboards. Needed to limit possible number of tokens.
+#reloadable
 user.dashboard.max.limit=10
 
 #user is limited with 100 messages per second.
+#reloadable
 user.message.quota.limit=100
 
 #maximum size of user profile in kb's
+#reloadable
 user.profile.max.size=128
 
 #in memory storage limit for storing *read* values from hardware
