--- a/integration-tests/src/test/resources/server.properties
+++ b/integration-tests/src/test/resources/server.properties
@@ -1,7 +1,7 @@
 app.ssl.enabled=true
 server.ssl.port=8283
-server.ssl.cert=/test-certs/server.crt
-server.ssl.key=/test-certs/server.pem
+server.ssl.cert=/test-certs/test-server.crt
+server.ssl.key=/test-certs/test-server.pem
 server.ssl.key.pass=blynkawesome
 
 server.default.port=8282
