New second-precise quota meter.

--- a/integration-tests/src/test/resources/server.properties
+++ b/integration-tests/src/test/resources/server.properties
@@ -16,6 +16,10 @@ user.dashboard.max.limit=10
 #user is limited with 100 messages per second.
 #reloadable
 user.message.quota.limit=100
+#in case of consistent quota limit exceed during long term, sending warning response back to exceeding channel
+#for performance reason sending only 1 message within interval. In millis
+#reloadable
+user.message.quota.limit.exceeded.warning.period=2000
 
 #maximum size of user profile in kb's
 #reloadable
