--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,15 @@
 
     <groupId>cc.blynk</groupId>
     <artifactId>blynk</artifactId>
-    <version>0.1</version>
+    <version>0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
+
+    <scm>
+        <url>https://github.com/blynkkk/blynk-server.git</url>
+        <connection>scm:git:https://github.com/blynkkk/blynk-server.git</connection>
+        <developerConnection>scm:git:ssh://git@github.com/blynkkk/blynk-server.git</developerConnection>
+        <tag>HEAD</tag>
+    </scm>
 
     <modules>
         <module>common</module>
@@ -34,6 +41,12 @@
                     <source>1.8</source>
                     <target>1.8</target>
                 </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.5.1</version>
             </plugin>
         </plugins>
     </build>
