--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 
     <scm>
         <url>https://github.com/blynkkk/blynk-server.git</url>
-        <connection>scm:git:https://github.com/blynkkk/blynk-server.git</connection>
+        <connection>scm:git:ssh://git@github.com/blynkkk/blynk-server.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/blynkkk/blynk-server.git</developerConnection>
         <tag>HEAD</tag>
     </scm>
@@ -47,6 +47,10 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
                 <version>2.5.1</version>
+                <configuration>
+                    <autoVersionSubmodules>true</autoVersionSubmodules>
+                    <tagNameFormat>v@{project.version}</tagNameFormat>
+                </configuration>
             </plugin>
         </plugins>
     </build>
